# python-mripgrep

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  README_EN.md  pyproject.toml  test.py
.github/workflows/: ci.yml  release.yml
python_mripgrep/: __init__.py
src/: lib.rs  ripgrep_core.rs
src/ripgrep_core/: haystack.rs  hiargs.rs  lowargs.rs
