[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
requires-python = ">=3.8,<3.15"
authors = [
    { name = "maming", email = "mm.bupt@outlook.com" },
    { name = "Josh Learn", email = "josh@exponent.run" },
    { name = "Indent", email = "noreply@indent.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
]
description = "A Python wrapper for ripgrep"
name = "python-mripgrep"
version = "0.0.10"
dependencies = []
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["ripgrep", "rg", "search", "grep", "regex", "rust", "mripgrep"]

[project.urls]
Homepage = "https://github.com/mm-bupt/python-mripgrep"
Repository = "https://github.com/mm-bupt/python-mripgrep"
Issues = "https://github.com/mm-bupt/python-mripgrep/issues"

[tool.maturin]
features = ["pyo3/extension-module"]